# Trade-Bot

./: .env.example  .gitignore  README.md  What is Trade Bot  pyproject.toml
config/: alpaca_live.json  alpaca_paper.json  demo.json  ibkr_live.json  ibkr_paper.json  oanda_live.json  oanda_paper.json
tests/: test_dashboard.py  test_env_loader.py  test_ibkr_helpers.py  test_live_helpers.py  test_modes.py  test_momentum_strategy.py  test_oanda_helpers.py  test_paper_broker.py
trade_bot/: __init__.py  __main__.py  cli.py  config.py  dashboard.py  engine.py  env.py  ibkr.py  live.py  models.py  modes.py  oanda.py  risk.py  runtime.py  system_status.py  webapp.py
trade_bot/brokers/: __init__.py  base.py  paper.py
trade_bot/data/: __init__.py  base.py  synthetic.py
trade_bot/strategies/: __init__.py  base.py  momentum.py
trade_bot/web_static/: app.js  index.html  styles.css
