[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "trade-bot"
version = "0.1.0"
description = "Paper-trading scaffold for a multi-asset trading bot"
readme = "README.md"
requires-python = ">=3.9"
authors = [{ name = "OpenAI Codex" }]

[tool.setuptools]
packages = ["trade_bot", "trade_bot.brokers", "trade_bot.data", "trade_bot.strategies"]

[tool.setuptools.package-data]
trade_bot = ["web_static/*.html", "web_static/*.css", "web_static/*.js"]
